--- a/theme-styles.css
+++ b/theme-styles.css
@@ -46,7 +46,7 @@
     --scrollbar-face: #ece9d8;
     --scrollbar-shadow: #aca899;
     --scrollbar-highlight: #ffffff;
-    --theme-image: url('images/themes/windows_xp.jpg');
+    --theme-image: url('images/windows_xp.jpg');
 }
 
 /* Windows 3.1 Theme */
